<resources>
    <string name="app_name">Quasso Liberum 9</string>
    <string name="home">Home</string>
    <string name="sponsor">Sponsors</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="cevcorner">cev corner</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="about_ql">  Quasso Liberum is the techno-cultural fest of College of Engineering Vadakara. It also refers to the independent body of students who organise this event along with many other social initiatives and outreach programs round the year. Undoubtedly QL8 will also take wings and break all the limits. BREAK FREE !</string>
    <string name="developers">DEVELOPERS</string>
    <string name="quasso_liberum_9">QUASSO LIBERUM 9</string>
    <string name="athul_santhosh">ATHUL SANTHOSH</string>
    <string name="sherin_k_r">SHERIN K R</string>
    <string name="sooraj_p_r">SOORAJ P R</string>
    <string name="shyam_sangeeth">SHYAM SANGEETH</string>
    <string name="feel_free_to_contact_us">Feel Free to Contact Us</string>
    <string name="student_union">STUDENT UNION</string>
    <string name="photo">Photo</string>
    <string name="logout">Logout</string>
    <string name="write_something">Write something....</string>
    <string name="post">POST</string>
    <string name="post_your_image">POST YOUR IMAGE</string>
    <string name="password">Password</string>
    <string name="no_account_sign_up">No account ? Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="cev_corner">CEV CORNER</string>
    <string name="already_registered_login">Already registered ? Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="file_provider_authority" translatable="false">ql.cev.ql9</string>
</resources>
