<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/quasso_liberum_9"
            android:fontFamily="serif"
            android:textColor="#000"
            android:layout_gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:padding="10dp"
            android:textColor="@color/cardview_light_background"
            android:background="@drawable/image_bg"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:text="@string/about_ql"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:textColor="@color/cardview_light_background"
            android:text="@string/developers"
            />
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:id="@+id/t1"
                    android:textColor="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/athul_santhosh"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="center"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:textColor="#fff"
                    android:id="@+id/t2"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sherin_k_r"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:gravity="center"
                    android:textColor="#fff"
                    android:id="@+id/t3"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sooraj_p_r"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:textColor="#fff"
                android:id="@+id/t4"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shyam_sangeeth"/>

        </LinearLayout>
        </LinearLayout>
</ScrollView>